# axum-code-executor

./: Cargo.toml  README.md
axum_backend/: .env  .gitignore  Cargo.toml
axum_backend/src/: main.rs
axum_backend/src/auth_utils/: mod.rs
axum_backend/src/cache/: mod.rs
axum_backend/src/controller/: auth.rs  executor.rs  mod.rs  types.rs
axum_backend/src/db/: mod.rs
axum_backend/src/email_utils/: mod.rs
axum_backend/src/middleware/: mod.rs
axum_backend/src/rabbitmq/: docker-compose.yml  email_consumer.rs  mod.rs
axum_backend/src/router/: auth.rs  executor.rs  mod.rs
axum_backend/src/types/: mod.rs
client/: .gitignore  README.md  package-lock.json  package.json
client/src/: App.tsx
client/src/components/auth/: Auth.css  Auth.tsx
client/src/components/code-executor/: CodeExetutorInput.css  CodeExetutorInput.tsx
client/src/components/forms/: ParentForm.css  ParentForm.tsx
client/src/types/: types.ts
express_gateway/: package-lock.json  package.json  server.ts
src/: main.rs
src/controller/: mod.rs  types.rs
src/router/: mod.rs
