[package]
name = "axum_project"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.219",  features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.37", features = ["full"] }
encoding = "0.2"
uuid = { version = "1.17.0", features = [ "v4", ] }