[package]
name = "axum_project"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219",  features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.6", features = ["cors"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
deadpool-postgres = "0.10"
encoding = "0.2"
dotenv = "0.15"
uuid = { version = "1.17.0", features = [ "v4", ] }