[package]
name = "axum_project"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features=["macros"]}
redis = { version = "0.32.4",  features = ["tokio-comp"] }
serde = { version = "1.0.219",  features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.6", features = ["cors"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
deadpool-postgres = "0.10"
encoding = "0.2"
dotenv = "0.15"
uuid = { version = "1.17.0", features = [ "v4", ] }
bcrypt = "0.17"
jsonwebtoken = "9.3.1" 
chrono = "0.4.41"  
axum-extra = { version = "0.10.1",  features = ["cookie", "typed-header"] }
time = "0.3"
lettre = "0.11.17"